Modified parsing algorithm. Fixed GameBoardTest